<resources>
    <string name="app_name">tawktest</string>
    <string name="retry">Retry</string>
    <string name="search_username_note">Search for user or note</string>
    <string name="notes">Notes:</string>
    <string name="add_notes">Add notes here</string>
    <string name="save">Save</string>
    <string name="followers">Followers: </string>
    <string name="following">Following: </string>
    <string name="name">"Name: "</string>
    <string name="location">"Location: "</string>
    <string name="saving_note">Saving note to DB…</string>
    <string name="note_saved">Note successfully saved.</string>
    <string name="note_error">Error saving note.</string>
    <string name="toggle_day_night_mode">Toggle day/night mode</string>
</resources>