<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.alvindizon.tawktest.ui.profile.ProfileViewModel" />
    </data>

    <com.skydoves.androidveil.VeilLayout
        android:id="@+id/detail_veilLayout_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:veilLayout_veiled="false"
        app:veilLayout_shimmerEnable="true"
        app:veilLayout_baseColor="@color/shimmer_base_0"
        app:veilLayout_highlightColor="@color/shimmer_highlight_0"
        app:veilLayout_baseAlpha="0.6"
        app:veilLayout_highlightAlpha="1.0"
        app:veilLayout_dropOff="0.5"
        app:veilLayout_radius="6dp" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/label_start_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.11" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/label_end_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.88" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vert_mid_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                style="@style/ProfileTextStyle"
                android:id="@+id/label_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/label_start_guideline"
                android:text="@string/followers"/>

            <TextView
                style="@style/ProfileTextStyle"
                android:id="@+id/followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.followers}"
                tools:text="5"
                app:layout_constraintEnd_toStartOf="@id/vert_mid_guideline"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/label_followers"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/ProfileTextStyle"
                android:id="@+id/label_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/following"
                app:layout_constraintEnd_toStartOf="@id/following"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@id/vert_mid_guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/ProfileTextStyle"
                android:id="@+id/following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.following}"
                app:layout_constraintEnd_toStartOf="@id/label_end_guideline"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/name_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="54dp" />

            <TextView
                style="@style/ProfileTextStyle"
                android:id="@+id/label_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@id/name_guideline"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/name"/>

            <TextView
                style="@style/ProfileTextStyle"
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.name}"
                tools:text="Alvin Dizon"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/label_name"
                app:layout_constraintBottom_toTopOf="@id/name_guideline"/>

            <TextView
                style="@style/ProfileTextStyle"
                android:id="@+id/label_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/name_guideline"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/location"/>

            <TextView
                style="@style/ProfileTextStyle"
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.location}"
                tools:text="Philippines"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/label_location"
                app:layout_constraintTop_toBottomOf="@id/name_guideline" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.skydoves.androidveil.VeilLayout>

</layout>
